Added install support for build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(MyProject)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
+SET(CMAKE_INSTALL_PREFIX build)
 
 ADD_SUBDIRECTORY(main)
 ADD_SUBDIRECTORY(test)
