--- a/test/testfoo/CMakeLists.txt
+++ b/test/testfoo/CMakeLists.txt
@@ -62,6 +62,8 @@ INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/libbar
 )
 
+INSTALL(TARGETS testfoo DESTINATION test)
+
 #find_package(PkgConfig)
 #pkg_check_modules(GTEST REQUIRED gtest>=1.7.0)
 #pkg_check_modules(GMOCK REQUIRED gmock>=1.7.0)
