Now it builds on Windows

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
 *.a
 *.cmake
 *.txt
+*.sln
+*.vcxproj*
 .vscode/*
+.vs/*
 **/CMakeFiles/*
 **/Makefile
 build/*
+lib/*
 **/myapp
 **/testfoo
 **/gtest/*
+**/Debug/*
+**/Release/*
+**/MinSizeRel/*
+**/RelWithDebInfo/*
+**/*.dir/*
+**/x64/*
