--- a/libbar/CMakeLists.txt
+++ b/libbar/CMakeLists.txt
@@ -10,4 +10,4 @@ INCLUDE_DIRECTORIES(
     ${CMAKE_SOURCE_DIR}/libfoo
 )
 
-INSTALL(TARGETS libbar ARCHIVE DESTINATION lib)
+INSTALL(TARGETS libbar ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib)
