--- a/libfoo/CMakeLists.txt
+++ b/libfoo/CMakeLists.txt
@@ -6,4 +6,4 @@ ADD_LIBRARY(libfoo
     ${MY_SRC}
 )
 
-INSTALL(TARGETS libfoo ARCHIVE DESTINATION lib)
+INSTALL(TARGETS libfoo ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib)
